syntax = "proto3";

package posts_proto;

option go_package=".";

message Empty{};

message Post {
    int32 id = 1;
    int32 author_account_id = 2;
    string text = 3;
    optional int32 source_post_id = 4;
    bool pinned = 5;
    int32 views_count = 6;
}

message Comment {
    int32 id = 1;
    int32 author_account_id = 2;
    string content = 3;
    optional int32 reply_comment_id = 4;
}

// GetPageSettings

message GetPageSettingsRequest {
    int32 account_id = 1;
}

message GetPageSettingsResponse {
    bool visible_for_unauthorized = 1;
    bool comments_enabled = 2;
    bool anyone_can_post = 3;
};

// EditPageSettings

message EditPageSettingsRequest {
    int32 account_id = 1;
    optional bool visible_for_unauthorized = 2;
    optional bool comments_enabled = 3;
    optional bool anyone_can_post = 4;
};

// NewPost

message NewPostRequest {
    int32 page_account_id = 1;
    string text = 2;
    optional int32 repost = 3;
};

message NewPostResponse {
    int32 post_id = 1;
};

// GetPost

message GetPostRequest {
    int32 post_id = 1;
}

// GetPosts

message GetPostsRequest {
    int32 page_account_id = 1;
    string page_token = 2;
}

message GetPostsResponse {
    repeated Post posts = 1;
    string next_page_token = 2;
}

// EditPost

message EditPostRequest {
    int32 post_id = 1;
    optional string text = 2;
    optional bool pinned = 3;
}

// DeletePost

message DeletePostRequest {
    int32 post_id = 1;
}

// NewComment

message NewCommentRequest {
    int32 post_id = 1;
    string content = 2;
    optional int32 reply_comment_id = 3;
};

message NewCommentResponse {
    int32 comment_id = 1;
};

// GetComments

message GetCommentsRequest {
    int32 post_id = 1;
    string page_token = 2;
}

message GetCommentsResponse {
    repeated Comment comments = 1;
    string next_page_token = 2;
}

// NewView
message NewViewRequest {
    int32 post_id = 1;
}

// NewLike
message NewLikeRequest {
    int32 post_id = 1;
}

service PostsService {
    rpc GetPageSettings(GetPageSettingsRequest) returns (GetPageSettingsResponse);
    rpc EditPageSettings(EditPageSettingsRequest) returns (Empty);

    rpc NewPost(NewPostRequest) returns (NewPostResponse);
    rpc GetPost(GetPostRequest) returns (Post);
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
    rpc EditPost(EditPostRequest) returns (Empty);
    rpc DeletePost(DeletePostRequest) returns (Empty);
    
    rpc NewComment(NewCommentRequest) returns (NewCommentResponse);
    rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);

    rpc NewView(NewViewRequest) returns (Empty);
    rpc NewLike(NewLikeRequest) returns (Empty);
};
