@startuml

hide circle
skinparam linetype ortho

entity pages {
    * id: integer <<PK>>
    --
    account_id: integer <<UNIQUE, NOT NULL>>
    visible_for_unauthorized: boolean <<NOT NULL, DEFAULT true>>
    comments_enabled: boolean <<NOT NULL, DEFAULT true>>
    anyone_can_post: boolean <<NOT NULL, DEFAULT true>>
    created_at: timestamptz <<NOT NULL, DEFAULT now()>>
    updated_at: timestamptz <<NOT NULL, DEFAULT now()>>
}

entity posts {
    * id: integer <<PK>>
    --
    page_id: integer <<NOT NULL>>
    author_account_id: integer <<NOT NULL>>
    text_content: text <<NOT NULL>>
    source_post_id: integer
    pinned: boolean <<NOT NULL, DEFAULT false>>
    views_count: integer <<NOT NULL, DEFAULT 0>>
    created_at: timestamptz <<NOT NULL, DEFAULT now()>>
    updated_at: timestamptz <<NOT NULL, DEFAULT now()>>
}

entity comments {
    * id: integer <<PK>>
    --
    post_id: integer <<NOT NULL>>
    author_account_id: integer <<NOT NULL>>
    text_content: text <<NOT NULL>>
    reply_comment_id: integer
    created_at: timestamptz <<NOT NULL, DEFAULT now()>>
    updated_at: timestamptz <<NOT NULL, DEFAULT now()>>
}

entity likes {
    * post_id: integer <<PK>>
    * author_account_id: integer <<PK>>
    --
    created_at: timestamptz <<NOT NULL, DEFAULT now()>>
}

entity outbox {
    * id: integer <<PK>>
    --
    is_processed: boolean <<NOT NULL, DEFAULT false>>
    event_type: varchar(64) <<NOT NULL>>
    payload: jsonb <<NOT NULL>>
    updated_at: timestamptz <<NOT NULL, DEFAULT now()>>
    created_at: timestamptz <<NOT NULL, DEFAULT now()>>
}

pages ||--o{ posts : "has many"
posts ||--o{ comments : "has many"
posts ||--o{ likes : "has many"

@enduml
